--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -31,7 +31,7 @@
             android:id="@+id/heading_layout"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_200dp"
-            android:background="@drawable/drawable_gradient_splash_background"
+            android:background="@color/browser_actions_bg_grey"
             android:gravity="center"
             tools:ignore="MissingConstraints">
 
@@ -52,7 +52,7 @@
                 android:gravity="center"
                 android:text="@string/app_name"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
-                android:textColor="@color/white" />
+                android:textColor="@color/primary" />
 
         </LinearLayout>
 
