--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="gray">#989898</color>
     <color name="color_error">#FF5722</color>
     <color name="color_green">#4CAF50</color>
+    <color name="color_light_green">#85ff8A</color>
     <color name="product_image_placeholder_color">#E1E1E1</color>
     <color name="white_color_shade1">#F8F8F8</color>
     <color name="item_value_text_color">#545353</color>
